# try-sendgrid-rs

./: Cargo.toml
src/: main.rs
